using actual mgo repo for latest, as well as made go build support building locally by making the terminal an interface

--- a/examples/service/build.cfg
+++ b/examples/service/build.cfg
@@ -1,13 +1,13 @@
 {
-  "Host": "kratos:22",
-  "User": "erik",
-  "Jail": "/home/erik/build",
+  "Host": "localhost",
+  "User": "",
+  "Jail": "/Users/erikstmartin/build",
 
-  "CGO_CFLAGS": "-I/home/erik/go/code/src/github.com/skynetservices/skynet/tools/starter-kit-linux/zookeeper/include",
-  "CGO_LDFLAGS": "/home/erik/go/code/src/github.com/skynetservices/skynet/tools/starter-kit-linux/zookeeper/lib/libzookeeper_mt.a -lm",
+  "CGO_CFLAGS": "-I/home/erik/go/src/github.com/skynetservices/skynet/tools/starter-kit-osx/zookeeper/include",
+  "CGO_LDFLAGS": "/home/erik/go/src/github.com/skynetservices/skynet/tools/starter-kit-osx/zookeeper/lib/libzookeeper_mt.a",
 
-  "GOROOT": "/home/erik/go/go",
-  "GOPATH": "/home/erik/go/code",
+  "GOROOT": "/Users/erikstmartin/go/go",
+  "GOPATH": "/Users/erikstmartin/go",
 
   "AppRepo": "git@github.com:skynetservices/skynet.git",
   "RepoType": "git",
