split up config so that deploy and build are logically separated

--- a/examples/service/build.cfg
+++ b/examples/service/build.cfg
@@ -1,19 +1,27 @@
 {
-  "Host": "localhost",
-  "User": "",
-  "Jail": "/Users/erikstmartin/build",
+  "Build": {
+    "Host": "localhost",
+    "User": "",
+    "Jail": "/Users/erikstmartin/build",
+    "CGO_CFLAGS": "-I/home/erik/go/src/github.com/skynetservices/skynet/tools/starter-kit-osx/zookeeper/include",
+    "CGO_LDFLAGS": "/home/erik/go/src/github.com/skynetservices/skynet/tools/starter-kit-osx/zookeeper/lib/libzookeeper_mt.a",
 
-  "CGO_CFLAGS": "-I/home/erik/go/src/github.com/skynetservices/skynet/tools/starter-kit-osx/zookeeper/include",
-  "CGO_LDFLAGS": "/home/erik/go/src/github.com/skynetservices/skynet/tools/starter-kit-osx/zookeeper/lib/libzookeeper_mt.a",
+    "GOROOT": "/Users/erikstmartin/go/go",
+    "GOPATH": "/Users/erikstmartin/go",
 
-  "GOROOT": "/Users/erikstmartin/go/go",
-  "GOPATH": "/Users/erikstmartin/go",
+    "AppRepo": "git@github.com:skynetservices/skynet.git",
+    "RepoType": "git",
+    "RepoBranch": "refactor",
+    "AppPath": "/examples/service",
 
-  "AppRepo": "git@github.com:skynetservices/skynet.git",
-  "RepoType": "git",
-  "RepoBranch": "refactor",
-  "AppPath": "/examples/service",
+    "RunTests": true,
+    "UpdatePackages": true,
 
-  "PreBuildCommands": [],
-  "PostBuildCommands": []
+    "PreBuildCommands": [],
+    "PostBuildCommands": []
+  },
+  "Deploy": {
+    "Path": "/services"
+  }
+
 }
