working through fetching dependencies, not complete. committing now because we are going to fork the repo to skynet2, so that dependency fetching while we're in progress works better due to go get wanting to grab from master

--- a/examples/service/build.cfg
+++ b/examples/service/build.cfg
@@ -3,8 +3,8 @@
     "Host": "localhost",
     "User": "",
     "Jail": "/Users/erikstmartin/build",
-    "CGO_CFLAGS": "-I/home/erik/go/src/github.com/skynetservices/skynet/tools/starter-kit-osx/zookeeper/include",
-    "CGO_LDFLAGS": "/home/erik/go/src/github.com/skynetservices/skynet/tools/starter-kit-osx/zookeeper/lib/libzookeeper_mt.a",
+    "CGO_CFLAGS": "-I/Users/erikstmartin/go/src/github.com/skynetservices/skynet/tools/starter-kit-osx/zookeeper/include",
+    "CGO_LDFLAGS": "/Users/erikstmartin/go/src/github.com/skynetservices/skynet/tools/starter-kit-osx/zookeeper/lib/libzookeeper_mt.a",
 
     "GOROOT": "/Users/erikstmartin/go/go",
     "GOPATH": "/Users/erikstmartin/go",
@@ -16,6 +16,7 @@
 
     "RunTests": true,
     "UpdatePackages": true,
+    "BuildAllPackages": true,
 
     "PreBuildCommands": [],
     "PostBuildCommands": []
