tools - update upstart script

--- a/tools/upstart/skydaemon.conf
+++ b/tools/upstart/skydaemon.conf
@@ -1,7 +1,6 @@
 description "Skynet Daemon"
 
-start on started network-services
-stop on stopping network-services
+start on (local-filesystems and net-device-up IFACE!=lo)
 
 kill signal TERM
 kill timeout 60
@@ -9,10 +8,22 @@ kill timeout 60
 respawn
 respawn limit 10 5
 
-setgid skynet
-setuid skynet
+setgid root
+setuid root
 
 # oom score -999
-# console log
+#console log
 
-exec $SKYNET_SERVICE_DIR/skydaemon
+script
+  . /etc/environment
+
+  export SKYNET_BIND_IP
+  export SKYNET_HOST
+  export SKYNET_MIN_PORT
+  export SKYNET_MAX_PORT
+  export SKYNET_REGION
+  export SKYNET_ZOOKEEPER
+  export SKYNET_SERVICE_DIR
+
+  $SKYNET_SERVICE_DIR/skydaemon
+end script
