add defaults for syslog

--- a/tools/conf/skynet.conf
+++ b/tools/conf/skynet.conf
@@ -6,6 +6,8 @@ host = 10.10.5.5
 region = "Development"
 
 log.level = DEBUG
+log.sysloghost = ""
+log.syslogport = 514
 
 client.conn.max = 5
 client.conn.idle = 2
